# exch

./: .env  .gitignore  README 2.md  README.md  cmake.sh  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  filebeat.yml  logstash.conf  nginx.conf  wait.sh
.github/workflows/: egusi.yaml  iyan.yaml
beef/: package-lock.json  package.json
beef/src/: App.js
beef/src/components/: Chart.js  Error.js  ErrorToast.js  Footer.js  Input.js  InputErrorMsg.js  Navbar.js  data.js
beef/src/icons/: Github.js
beef/src/images/: office.avif
beef/src/lib/: WaitForWs.js  WebsocketProvider.js  constants.js  http.js  showError.js  showInfo.js  useConnection.js  useErrorStore.js  useHttp.js  useHttpClient.js  useListeners.js  useOrderBook.js  useTokenStore.js  useVerifyIsLoggedIn.js  useWebsocketHandler.js  wrapper.js  ws.js
beef/src/pages/: Home.js  Login.js  Register.js  Trade.js  Wallet.js
coke/: package-lock.json  package.json
coke/src/: index.js  worker.js  ws.js
config/packer/: setup.sh  template.json  template.json.pkr.hcl
config/terraform/: machine.tf  network.tf  output.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
egusi/: .gitignore  Dockerfile  OPERATION.md  README.md  TODO.md  mix.exs
egusi/config/: config.ex
egusi/lib/: egusi.ex  ugwu.ex
egusi/lib/Onion/: balance_rabbit.ex  client_rabbit.ex  login_session.ex  md_rabbit.ex  order_rabbit.ex  rabbit.ex  snapshot_rabbit.ex  telemetry.ex  ticker_session.ex  token_rabbit.ex  users_session.ex
egusi/lib/Onion/supervisors/: balance_rabbit.ex  client_rabbit.ex  login_session.ex  md_rabbit.ex  order_rabbit.ex  ticker_session.ex  token_rabbit.ex
egusi/lib/Ugwu/: call.ex  cast.ex  message.ex  socket.ex  translator.ex
egusi/lib/Ugwu/message/: manifest.ex  push.ex
egusi/lib/Ugwu/message/auth/: request.ex
egusi/lib/Ugwu/message/request/: orderbook.ex
egusi/lib/Ugwu/message/trade/: cancel.ex  listen.ex  modify.ex  new.ex
egusi/lib/Ugwu/plugs/: cors.ex
egusi/lib/Ugwu/translator/: translate.ex  v01.ex
egusi/lib/Ugwu/types/: operator.ex
egusi/lib/egusi/: access_token.ex
egusi/lib/egusi/auth/: auth.ex
egusi/lib/egusi/metrics/: prometheus.ex
egusi/lib/egusi/request/: order_book.ex
egusi/lib/egusi/trade/: all.ex  cancel.ex  create.ex  listen.ex
egusi/lib/egusi/utils/: errors.ex  token_utils.ex
egusi/test/: egusi_test.exs
elk/: docker-compose.yml
elk/logstash/pipeline/: logstash.conf
filebeat/: filebeat.yml
iyan/: .env  Cargo.toml  Dockerfile  README.md  STOPPED.md
iyan/config/: Cargo.toml
iyan/config/src/: lib.rs
iyan/core/: Cargo.toml
iyan/core/src/: lib.rs  schema.rs  test.rs
iyan/core/src/db/: client.rs  mod.rs  postgres.rs  token.rs  users.rs  wallet.rs
iyan/core/src/models/: client.rs  errors.rs  mod.rs  token.rs  user.rs  wallet.rs
iyan/iyan/: iyan.toml  main.rs
iyan/logger/: Cargo.toml
iyan/logger/src/: lib.rs
iyan/migrations/2023-09-15-073024_videos/: up.sql
iyan/migrations/2023-09-15-080633_tokens/: up.sql
iyan/migrations/2023-09-15-081356_wallet_owner_client/: down.sql  up.sql
iyan/rabbitmq/: Cargo.toml
iyan/rabbitmq/src/: errors.rs  lib.rs  listener.rs  models.rs  sender.rs
iyan/server/: Cargo.toml
iyan/server/src/: lib.rs  state.rs
iyan/server/src/auth/: mod.rs
iyan/server/src/controllers/: auth.rs  mod.rs  token.rs  wallet.rs
iyan/server/src/services/: client.rs  errors.rs  mod.rs  tokens.rs  users.rs  wallet.rs
iyan/types/: Cargo.toml
iyan/types/src/: admin_activity.rs  admin_activity_enum.rs  lib.rs
logstash/: Dockerfile
logstash/config/: logstash.conf
logstash/pipeline/: logstash.conf
matching_engine/: CMakeLists.txt  Dockerfile
matching_engine/common/: lf_queue.h  perf_utils.h  rabbitmq.cpp  rabbitmq.h  types.h
matching_engine/exchange/: exchange_main.cpp
matching_engine/exchange/market_data/: market_data_publisher.cpp  market_data_publisher.h  snapshot_synthesizer.cpp  snapshot_synthesizer.h
matching_engine/exchange/matcher/: matching_engine.h  me_order_book.cpp  me_order_book.h
matching_engine/exchange/order_server/: client_response.h  order_server.cpp  order_server.h
matching_engine/scripts/: run_exchange_and_clients.sh
nginx/: nginx.conf
ssl/: privkey.pem  server.csr  server.pem
turkey/: .dockerignore  CMakeLists.txt  Dockerfile  IMPO.md
turkey/amqpcpp/: CMakeLists.txt  Makefile
turkey/common/: AMQPcpp.h  CMakeLists.txt  lf_queue.h  logging.h  rabbitmq.h  s.cpp  time_utils.h
turkey/exchange/: CMakeLists.txt  exchange_main.cpp
turkey/exchange/market_data/: market_data_publisher.cpp  market_data_publisher.h  snapshot_synthesizer.cpp  snapshot_synthesizer.h
turkey/exchange/matcher/: matching_engine.cpp  matching_engine.h  me_order_book.cpp  me_order_book.h
turkey/exchange/order_server/: fifo_sequencer.h  order_server.cpp  order_server.h
turkey/scripts/: build.sh  run_exchange.sh
