[package]
name = "iyan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
env_logger = "0.10.0"
toml = "0.7.6"
log = "0.4"
lapin = "2.3.1"
tokio = { version = "1.32", features = ["full"] }
deadpool = "0.9.0"
deadpool-lapin = "0.10.0"
tokio-amqp = "2.0.0"
 
server = { path = "./server" }
config = { path = "./config" }
types = { path = "./types" }
core = { path = "./core" }
logger =  { path = "./logger" }
rabbitmq = { path = "./rabbitmq" }

[[bin]]
path = "iyan/main.rs"
name = "iyan"

[workspace]
members = ["server", "config", "core", "types", "rabbitmq", "logger"]