[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = { version = "4.3.1" }
base64 = "0.21.2"
bigdecimal = { version = "0.2.2", features = ["serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono", "r2d2", "uuid", "numeric"] }
failure = "0.1.5"
futures = "0.3.28"
hex = "0.4.3"
jsonwebtoken = "8.3.0"
serde = "1.0.183"
serde_derive = "1.0.167"
serde_json = { version = "1.0.105" }
uuid = { version = "1.4.0", features = ["serde", "v4"] }

types = { path = "../types" }