[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest= "0.11.18"
log = "0.4"
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.10"
serde = "1.0.183"
serde_derive = "1.0.167"
serde_json = { version = "1.0.105" }