[package]
name = "rabbitmq"
version = "0.1.0" 
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.183"
serde_derive = "1.0.167"
bigdecimal = { version = "0.4.1", features = ["serde"] }
actix = "0.13.0"
actix-web = { version = "4.3.1" }
actix-cors = "0.6.4"
failure = "0.1.5"
futures = "0.3.28"
log = "0.4.20"
num_cpus = "1.16.0"
openssl = "0.10.56"
serde_json = { version = "1.0.105" }
uuid = { version = "1.4.0", features = ["serde", "v4"] }
ring= "0.16.20"
lapin = "2.3.1"
tokio = { version = "1.32", features = ["full"] }
deadpool = "0.9.0"
deadpool-lapin = "0.10.0"
tokio-amqp = "2.0.0"
thiserror = "1.0.30"
actix-rt = "2.9.0"

config = { path = "../config" }
core = { path = "../core" }