[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { version = "0.4.1", features = ["serde"] }
byteorder = "1.4.3"
diesel = { version = "1.3.0", features = ["postgres", "chrono", "r2d2", "uuid", "numeric"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
digest = "0.7"
failure = "0.1.5"
serde = "1.0.183"
serde_derive = "1.0.167"
serde_json = { version = "1.0.105" }
